--- a/src/orcawsdwa/CMakeLists.txt
+++ b/src/orcawsdwa/CMakeLists.txt
@@ -56,7 +56,7 @@ include
 # install(TARGETS DWA_main_1  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION} )
 
 add_executable(pub_sub src/pub_sub.cpp src/ModelSubPub.cpp src/Agent.cpp  src/Vector2.cc   src/Line.cc src/Obstacle.cc src/Neighbor.cc
- src/KinematicModel.cpp src/DWA.cpp src/Line.cc   src/rrt.cpp        src/rrt_backtrace.cpp)
+ src/KinematicModel.cpp src/DWA.cpp src/Line.cc   src/rrt.cpp      src/rrt_backtrace.cpp   src/RRTmain.cpp)
 ## Specify libraries to link a library or executable target against
 target_link_libraries(pub_sub  ${catkin_LIBRARIES} )
 
